--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,10 @@ html {
 /* Scroll snap */
 .nav-principal,
 .sobre-mi,
-.educacion, .experiencia, .proyectos {
+.educacion,
+.experiencia,
+.proyectos,
+.contacto {
     scroll-snap-align: center;
     scroll-snap-stop: always;
 }
@@ -38,6 +41,9 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+section {
+    margin-bottom: 5rem;
+}
 
 .contenedor {
     width: 100%;
@@ -169,4 +175,27 @@ header img {
 
 .experiencia .grid {
     grid-template-columns: repeat(2, 1fr);
+}
+
+.contacto ul {
+    text-decoration: none;
+    list-style: none;
+    justify-content: space-around;
+}
+
+.icono {
+    font-size: x-large;
+    margin-right: 1rem;
+}
+
+.animar {
+    transition: transform 0.5s ease-in-out;
+}
+
+.animar:hover {
+    transform: scale(1.1);
+}
+
+.proyectos a {
+    text-decoration: none;
 }
