--- a/css/index.css
+++ b/css/index.css
@@ -102,6 +102,7 @@ header h1 {
     /* Color de enlace */
     color: #033550;
     padding: 10px 20px;
+    margin: 3px;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
