--- a/css/index.css
+++ b/css/index.css
@@ -21,8 +21,9 @@ body {
 
 header {
     background-color: #333;
-    padding: 20px 0;
+    padding: 50px 0 20px 0;
 }
+
 
 header h1 {
     margin: 0;
